# Autonomous-Human-Following-Feature-in-Quadruped

./: README.md
Python_implementation/: CMakeLists.txt  setup.py
Python_implementation/copub/: mask_rcnn.py  object_detection_listener.py  object_detection_publisher.py
Python_implementation/copub/dnn/: frozen_inference_graph_coco.txt
ROS2_implementation/: map_1720621260.pgm  map_1720621260.yaml  map_1720621263.yaml  map_1720621270.yaml
ROS2_implementation/copub/: package.xml  setup.cfg
ROS2_implementation/copub/copub/: object_detection_publisher.py
ROS2_implementation/copub/copub/dnn/: frozen_inference_graph_coco.txt
ROS2_implementation/human_follower/: human_follower.cpp
ROS2_implementation/launch/: my_launch_file.launch.py
ROS2_implementation/odom_tf_publisher/: CMakeLists.txt
ROS2_implementation/odom_tf_publisher/src/: odom_to_tf.cpp
